examples/test/testpolicy17600.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17600
  namespace: namespace177
spec:
  podSelector:
    matchLabels:
      key11: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value6
          key33: value6
          key29: value34
      podSelector:
        matchLabels:
          key12: value29
          key4: value6
          key29: value38
